add webhook of clerk

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmFwaWQtcGVnYXN1cy02LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_VOwNeZ3Kf9xKJhEecoKoQVaTz5eTbT69U1QfXwhntG
+MONGODB_URL=mongodb+srv://nirajversilal:HrKdmVad3IUOnXBJ@filestoragecluster.l73sd.mongodb.net/?retryWrites=true&w=majority&appName=FileStorageCluster
 
+WEBHOOK_SECRET=whsec_lthnaICQ6KOZltZwP8Xk7WZdOluEOZrp
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
