--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.452.0",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
+    "next-nprogress-bar": "^2.3.14",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.37.0",
