--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ WEBHOOK_SECRET=whsec_lthnaICQ6KOZltZwP8Xk7WZdOluEOZrp
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
