--- a/.env
+++ b/.env
@@ -1,6 +1,19 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cmFwaWQtcGVnYXN1cy02LmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_VOwNeZ3Kf9xKJhEecoKoQVaTz5eTbT69U1QfXwhntG
 MONGODB_URL=mongodb+srv://nirajversilal:HrKdmVad3IUOnXBJ@filestoragecluster.l73sd.mongodb.net/?retryWrites=true&w=majority&appName=FileStorageCluster
-WEBHOOK_SECRET=whsec_pN53c2OpgvNCptpDo4MPCIe0LkV2dxof
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+
+URL="http://localhost:3000"
+
+KINDE_CLIENT_ID=ffa4167d70ee4c21986323371e714eac
+KINDE_CLIENT_SECRET=1EON2ycDfMm4aAIObt82HuycdqJRKNGjLWKdwejDTCLolpDIziffm
+KINDE_ISSUER_URL=https://helloworld1.kinde.com
+KINDE_SITE_URL=http://localhost:3000
+KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
+KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/api/CreateUser
+
+
+CLOUDINARY_CLOUD__NAME=dfyfnvmtr
+CLOUDINARY__API__KEY=882291813473536
+CLOUDINARY__API__SECRET__KEY=l5GEqogdXnSm7xJVOZXtfssMEtE
+
+
+SENDEREMAIL="nirajversilal@gmail.com"
+SENDERPASSWORD=opxw eitd duql hltb
