--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.7.2",
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.11",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@react-email/components": "^0.0.25",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "loadable-image": "^3.2.6",
     "lucide-react": "^0.452.0",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
     "next-nprogress-bar": "^2.3.14",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
-    "svix": "^1.37.0",
+    "react-dropzone": "^14.2.9",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
