--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 MONGODB_URL=mongodb+srv://nirajversilal:HrKdmVad3IUOnXBJ@filestoragecluster.l73sd.mongodb.net/?retryWrites=true&w=majority&appName=FileStorageCluster
 
-URL="https://file-storage-2l3f.vercel.app/"
+URL1="https://file-storage-12.netlify.app/"
 
 KINDE_CLIENT_ID=ffa4167d70ee4c21986323371e714eac
 KINDE_CLIENT_SECRET=1EON2ycDfMm4aAIObt82HuycdqJRKNGjLWKdwejDTCLolpDIziffm
 KINDE_ISSUER_URL=https://helloworld1.kinde.com
-KINDE_SITE_URL=https://file-storage-2l3f.vercel.app/
-KINDE_POST_LOGOUT_REDIRECT_URL=https://file-storage-2l3f.vercel.app/
-KINDE_POST_LOGIN_REDIRECT_URL=https://file-storage-2l3f.vercel.app/api/CreateUser
+KINDE_SITE_URL=https://file-storage-12.netlify.app/
+KINDE_POST_LOGOUT_REDIRECT_URL=https://file-storage-12.netlify.app/
+KINDE_POST_LOGIN_REDIRECT_URL=https://file-storage-12.netlify.app/api/CreateUser
 
 
 CLOUDINARY_CLOUD__NAME=dfyfnvmtr
