--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
 
-# testing
-/coverage
-
-# next.js
+# next.js build output
 /.next/
+
+# production artifacts
 /out/
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnp
+.pnp.js
 
-# local env files
+# environment variables
 .env*.local
+.env
 
-# vercel
-.vercel
+# local development
+.DS_Store
+.vscode/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# misc
+*.log
+*.map
+.swc/
